Fixed White Gap after Splash Screen

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -31,6 +31,10 @@
     background-color: #fff;
   }
 
+  .picker-wp .picker-wrapper{
+    background-color: #fff;
+  }
+
   .picker-ios .picker-below-highlight {
     background: linear-gradient(to top, white 30%, rgba(255, 255, 255, 0.7) 100%);
   }
